# nn_laser_spot_tracking

./: .gitignore  AGENTS.md  CITATION.cff  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.x11-ssh.yml  docker-compose.yml  package.xml
benchmark/: README.md  color_thresholder.py  laser_detect_evaluate.py  laser_detect_filter_blob.py  laser_detect_nn.py
laser_udp_bridge/scripts/: laser_udp_bridge_node.py
launch/: aruco_table_calibration.launch  docker_stack.launch  laser_udp_bridge.launch  tracking_2d.launch
scripts/: inferNodeROS.py
